--- a/templates/site.html
+++ b/templates/site.html
@@ -36,6 +36,7 @@
 <div id="wrap">
 	<div id="header">
 	<img class="logo" src="{{ MEDIA_URL }}img/logo.png">
+	<h1 style="float:right;">Experemental version</h1>
 	<!-- Navigation start -->
 <ul id="menu">
   <li><a href="{% url index %}">{% trans "Home" %}</a></li>
