--- a/templates/room/rooms.html
+++ b/templates/room/rooms.html
@@ -1,16 +1,10 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% block content %}
-<h1>My requests</h1>
+<h1>Your rooms</h1>
 <ul class="actions">
-    {% for rel in buy %}
-    <li>{{ rel.ticket }}<input style="float:right;" type="button" value="Cancel transaction" onclick="javascript:popup('{% url ticket_manage rel.ticket.id %}?embed=yes')"></li>
-    {% endfor %}
-</ul>
-<h1>My services</h1>
-<ul class="list">
-    {% for rel in sell %}
-    <li>{{ rel.ticket }}<input style="float:right;" type="button" value="Cancel transaction" onclick="javascript:popup('{% url ticket_manage rel.ticket.id %}?embed=yes')"></li>
+    {% for room in rooms %}
+    <li><a href="{% url room_view room.pk %}">{{ room }}</li></li>
     {% endfor %}
 </ul>
 {% endblock %}
