--- a/templates/site.html
+++ b/templates/site.html
@@ -11,6 +11,7 @@
 	<meta name="viewport" content="width=768px, minimum-scale=1.0, maximum-scale=1.0" />
 	<!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/style.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}schedule/css/schedule.css" media="screen" />
         <link rel="stylesheet" href="{{ MEDIA_URL}}userprofile/css/blueprint/screen.css" type="text/css" media="screen, projection" />
         <link rel="stylesheet" href="{{ MEDIA_URL }}userprofile/css/blueprint/print.css" type="text/css" media="print" />
         <link rel="stylesheet" href="{{ MEDIA_URL }}userprofile/css/blueprint/plugins/fancy-type/screen.css" type="text/css" media="screen, projection" />
