--- a/templates/room/room.html
+++ b/templates/room/room.html
@@ -85,7 +85,7 @@
 
 	//-->
 	</script>	
-<div style="height: 500px;">
+<div style="height: 600px; position: relative;">
     <div style="position: absolute; left: 10px; top: 10px; width: 320px; height: 240px;">
 		<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
 			id="video1" width="320" height="240"
