--- a/templates/schedule/calendar_day.html
+++ b/templates/schedule/calendar_day.html
@@ -2,7 +2,7 @@
 {% load scheduletags %}
 {% block content %}
 {% include "schedule/_dialogs.html" %}
-<div class="navigation">
+<div class="cal-navigation">
   <a href="{% url week_calendar calendar.slug %}{% querystring_for_date periods.day.start 3 %}">
     Week
   </a>
