--- a/templates/schedule/calendar_tri_month.html
+++ b/templates/schedule/calendar_tri_month.html
@@ -19,7 +19,7 @@
 	</tr>
 </table>
 </div>
-<div class="navigation">
+<div class="cal-navigation">
   <a href="{% url month_calendar calendar.slug %}{% querystring_for_date periods.month.start 2 %}">
     Monthly Calendar
   </a>
