--- a/templates/schedule/calendar_year.html
+++ b/templates/schedule/calendar_year.html
@@ -28,7 +28,7 @@
     {% endfor %}
     </tr>
 </table></p>
-<div class="navigation">
+<div class="cal-navigation">
   <a href="{% url month_calendar calendar.slug %}">
     Current Month Calendar
   </a>
