--- a/templates/schedule/event.html
+++ b/templates/schedule/event.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<div class="navigation">
+<div class="cal-navigation">
   <a href="{% url day_calendar event.calendar.slug %}{% querystring_for_date event.start 3 %}">
     Day
   </a>
