--- a/templates/schedule/calendar_month.html
+++ b/templates/schedule/calendar_month.html
@@ -12,7 +12,7 @@
   </div>
   {% month_table calendar periods.month "regular" %}
 </div>
-<div class="navigation">
+<div class="cal-navigation">
   <a href="{% url tri_month_calendar calendar.slug %}{% querystring_for_date periods.month.start 2 %}">
     Three Month Calendar
   </a>
