--- a/templates/site.html
+++ b/templates/site.html
@@ -85,7 +85,7 @@
                                 <img alt="Facebook" title="Facebook" src="{{ MEDIA_URL }}img/social_facebook.png"></a>
                         </li>
                         <li><a title="Twitter" href="http://www.ermak.us/index.html" rel="nofollow">
-                                <img alt="Twitter" title="Twitter" src="{{ MEDIA_URL }}/img/social_twitter.png"></a>
+                                <img alt="Twitter" title="Twitter" src="{{ MEDIA_URL }}img/social_twitter.png"></a>
                         </li>
       </ul>
       <p>Stay up to date. Subscribe via
