--- a/templates/site.html
+++ b/templates/site.html
@@ -29,7 +29,7 @@
 {% block extra_body %}
 {% endblock %}
 <!--header -->
-<div id="header-wrap">
+<div id="header-wrap" class="header-bg">
 <div id="header">
 <a name="top"></a>
 <a href="/" title="Logo">
@@ -55,7 +55,8 @@
       </fieldset>
    </form>
 <!--/header-->
-</div></div>
+</div>
+</div>
 <!-- content-outer -->
 <div id="content-wrap" class="clear">
    <div id="content">
