Chat and layout improvements

--- a/templates/site.html
+++ b/templates/site.html
@@ -41,6 +41,7 @@
   <li><a href="{% url index %}">{% trans "Home" %}</a></li>
   <li><a href="{% url category 'root' %}">{% trans 'Categories' %}</a></li>
   <li><a href="{% url rooms_view %}">{% trans 'My Rooms' %}</a></li>
+  <li class="authorized" style="display: none;"><a class="act" href="{% url call_view %}">{% trans "Call" %}</a></li>
   <li class="authorized" style="display: none;"><a href="{% url profile_overview %}">{% trans 'Profile' %} (<u id="username"></u>)</a></li>
   <li class="authorized" style="display: none;"><a href="{% url socialauth.views.social_logout %}">{% trans "Sign out" %}</a></li>
   <li class="unauthorized" style="display: none;"><a class="act" href="{% url socialauth.views.login_page %}">{% trans "Sign in" %}</a></li>
