--- a/templates/room/room.html
+++ b/templates/room/room.html
@@ -4,29 +4,16 @@
 <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.cookie.js"></script>
 <script type="text/javascript" src="{{ MEDIA_URL }}js/Orbited.js"></script>
 <script type="text/javascript" src="{{ MEDIA_URL }}js/stomp.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}js/JSON.js"></script>
 <script type="text/javascript">
-	var media_url = 'rtmp://cloudpub.us/sip';
-	var stream    = "{{ channel.name }}";
+	var stream    = "{{ room.pk }}";
    	var server    = "{{ site.domain }}";
-	var user      = "{{ channel.name }}";
-	var authname  = "{{ channel.name }}";
-	var authpass  = "{{ channel.secret }}";
-	var displayname = "{{ channel.callerid }}";
-	var rate      = 8;
-	var rate_name = "narrowband";
-	var url = "rtmp://" +server+ "/sip/" +user + "@" + server + "?rate=" +rate+ "&bidirection=true"+ "&arg=" +authname+ "&arg=" +authpass+ "&arg=" +displayname+ "&arg=" +rate_name;
+	var user      = "{{ request.user.username }}";
         var comet_port = 9999;
         var TCPSocket = Orbited.TCPSocket;
 	var client = new STOMPClient();
 
-	// Get the Flash Movie by name, e.g., "video1" or "video2".
-	function getFlashMovie(movieName) {
-	    var isIE = navigator.appName.indexOf("Microsoft") != -1;
-	    return (isIE) ? window[movieName] : document[movieName];
-	}
-    	
-
-        function createChannel() {
+        $( function() {
 		log("Connecting...");
 		client.onopen = function() {
 			log("You connected to chat");
@@ -51,143 +38,46 @@
     		};
 
     		client.onmessageframe = function(frame) { //check frame.headers.destination?
-        		log( "MESSAGE: " + frame.body );
+			var msg = eval( "(" + frame.body + ")" );
+        		log( "<b>" + msg.from + "</b>: " + msg.text );
     		};
 
     		var cookie = $.cookie("sessionid");
-    		client.connect(server, comet_port, authname, cookie);
-    	}
+    		client.connect(server, comet_port, user, cookie);
+		$('#msg').keypress( function(event) {
+			if ((event.keyCode || event.which) == 13) { 
+				send( $(this).attr('value') );
+				$(this).attr('value','');
+				return false; 
+			}
+		});
+		$('#msg').bind('focus',function() {
+        		$(window).scrollTop(600);
+    		});
+
+    	} );
     
-        // When VideoIO is created, and user has specified the name, start local video.
-	function onCreationComplete(event) {
-		if (event.objectID == "video1") {
-			getFlashMovie("video1").setProperty("src", url);
-			//getFlashMovie("video1").setProperty("src", "http://www.mediacollege.com/video-gallery/testclips/20051210-w50s.flv" );
-		}		
-	}
-
-	// When local video's nearID is set, set our "src" property and initiate login.
-	function onPropertyChange(event) {
-		if (event.property == "src" && event.objectID == "video1") {
-		}
-	}
-
-	function onCallback(event) {
-		log( "SIP: "  + event.method );
-		if (event.method == "accepted") {
-        		getFlashMovie('video1').setProperty('publish', 'local');
-        		getFlashMovie('video1').setProperty('play', 'remote');
-    		}
-		if (event.method == "invited") {
-			if( confirm("Incoming call. Accept?") ) {		
-				getFlashMovie('video1').callProperty('call', 'accept');
-			} else {
-				getFlashMovie('video1').callProperty('call', 'reject', '486 Busy Here');
-			}
-    		}	 
-	}
-
-	function send() {
-		var msg = document.getElementById("input").value;
-		if (msg) {
-			document.getElementById("input").value = "";
-			if( msg.indexOf("sip:") == 0 ) {
-				log("INVITE: " + msg);
-				getFlashMovie("video1").callProperty("call", "invite", msg + "@cloudpub.us" );
-			} else {
-				client.send( '{"type":"chat","text":"' + msg + '"}', stream );
-			}
-		}
+	function send(msg) {
+		client.send( '{"type":"chat","text":"' + msg + '"}', stream );
 	}
 	
 	// Write a message to the chat history text area.
 	function log(msg) {
-		var obj = document.getElementById("history");
-		obj.value += (obj.value == "" ? "" : "\n") + msg; 
+		var ctrl = $("#history").append( msg + "\n" );
+		ctrl.attr({ scrollTop: ctrl.attr("scrollHeight") });
 	}
-
-	$( function() { createChannel(); } );
 	</script>	
 {% endblock %}
 {% block content %}
-<div style="height: 600px; position: relative;">
-    <div style="position: absolute; left: 10px; top: 10px; width: 320px; height: 240px;">
-		<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
-			id="video1" width="320" height="240"
-			codebase="http://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab">
-			<param name="movie" value="{{ MEDIA_URL }}VideoIO.swf" />
-			<param name="quality" value="high" />
-			<param name="bgcolor" value="#000000" />
-			<param name="allowFullScreen" value="true" />
-			<param name="flashVars" value="controls=true&cameraQuality=80" />
-			<param name="allowScriptAccess" value="always" />
-			<embed src="{{ MEDIA_URL }}VideoIO.swf" quality="high" bgcolor="#000000"
-				width="320" height="240" name="video1" align="middle"
-				play="true" loop="false" quality="high"
-				allowFullScreen="true"
-				flashVars="controls=true&cameraQuality=80"
-				allowScriptAccess="always"
-				type="application/x-shockwave-flash"
-				pluginspage="http://www.adobe.com/go/getflashplayer">
-			</embed>
-		</object>
-    </div>
-    <div style="position: absolute; left: 10px; top: 260px; width: 320px; height: 240px;">
-    
-<table style="width: 80px;">
-    <caption><i>Dialpad</i>:</caption>
-    <tbody><tr><td>
-    <input value="1" onclick="getFlashMovie('video1').callProperty('call', 'sendDTMF', '1')" type="button">
-    </td><td>
-    <input value="2" onclick="getFlashMovie('video1').callProperty('call', 'sendDTMF', '2')" type="button">
-    </td><td>
-    <input value="3" onclick="getFlashMovie('video1').callProperty('call', 'sendDTMF', '3')" type="button">
-    </td></tr><tr><td>
-    <input value="4" onclick="getFlashMovie('video1').callProperty('call', 'sendDTMF', '4')" type="button">
-    </td><td>
-    <input value="5" onclick="getFlashMovie('video1').callProperty('call', 'sendDTMF', '5')" type="button">
-    </td><td>
-    <input value="6" onclick="getFlashMovie('video1').callProperty('call', 'sendDTMF', '6')" type="button">
-    </td></tr><tr><td>
-    <input value="7" onclick="getFlashMovie('video1').callProperty('call', 'sendDTMF', '7')" type="button">
-    </td><td>
-    <input value="8" onclick="getFlashMovie('video1').callProperty('call', 'sendDTMF', '8')" type="button">
-    </td><td>
-    <input value="9" onclick="getFlashMovie('video1').callProperty('call', 'sendDTMF', '9')" type="button">
-    </td></tr><tr><td>
-    <input value="*" onclick="getFlashMovie('video1').callProperty('call', 'sendDTMF', '*')" type="button">
-    </td><td>
-    <input value="0" onclick="getFlashMovie('video1').callProperty('call', 'sendDTMF', '0')" type="button">
-    </td><td>
-    <input value="#" onclick="getFlashMovie('video1').callProperty('call', 'sendDTMF', '#')" type="button">
-    </td></tr>
-</tbody></table>
-</div>
-
-	<div style="position: absolute; left: 340px; top: 10px; width: 320px; height: 490px;">
-		<div style="float: right; height: 18px;">
-			<div id="local" style="float: left;"></div>
-		</div>
-		<textarea id="history" autocomplete="off"
-			style="width: 320px; height: 410px;"></textarea>
-		<br/>
-		Enter your text message: 
-		<input id="input" type="text" autocomplete="off"
-			style="width: 320px; height: 24px;"
-			onkeypress="javascript: if ((event.keyCode || event.which) == 13) { send(); return false; }"/>
-			
-		<div style="float: right; height: 18px;">
-			<div id="status" style="float: left;"><b>Your number is <h2><a href='javascript:getFlashMovie("video1").callProperty("call", "invite", "sip:{{ channel.name }}@cloudpub.us")'>sip:{{ channel.name }}@cloudpub.us</a></h2></b></div>
-		</div> 
-	</div>
-</div>
-
+<pre id="history" style="width: 95%; padding: 5px; height: 410px; word-wrap: break-word; overflow-x: hidden; overflow-y: auto; border: solid black 1px;"></pre>
+<br/>
+Enter your text message:
+<br/>
+<input id="msg" type="text" autocomplete="off" style="width: 90%; height: 24px;"/>
 {% endblock %}
 {% block sidebar %}
 <div class="box">
-You can chat or make voice and video call to peoples it this room.
-This page is under development, only web to web calls supported.
-Type your friend phone number with <b>sip:</b> prefix to invite.
+This is text chat with user
 </div>
 {% endblock %}
 {% block initscript %}
