--- a/templates/site.html
+++ b/templates/site.html
@@ -32,10 +32,11 @@
 <div id="header-wrap" class="header-bg">
 <div id="header">
 <a name="top"></a>
-<a href="/" title="Logo">
-<h1 style="padding-top: 50px; font-family: etica-1,etica-2,Helvetica,Arial,sans-serif; font-size: 84px; font-weight: bold;">Cloudpub<sup style="font-size: 24px; top: -50px; position: relative;">beta</sup>
-</h1>
+<h1 class="header-logo">
+<a href="/" title="Logo" class="color-1">
+Cloudpub<sup style="font-size: 24px; top: -50px; position: relative;">beta</sup>
 </a>
+</h1>
 <div id="nav">
 <ul>
   <li><a href="{% url index %}">{% trans "Home" %}</a></li>
